--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3"
+version: "3.8"
 
 services:
-  fifaapi:
+  api:
     build: .
     ports:
-      - "0.0.0.0:5000:5000"
+      - "5000:5000"
     env_file: # Pass the environment variables in the .env file to the container
       - .env
